# audo-eq

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  pyproject.toml
api/: main.py
docker/: Dockerfile
docs/: api-contract.md  architecture-overview.md  audio-format-support.md  domain-policy-vocabulary.md  mastering-pipeline.md  operations-runbook.md  pi-safe-mastering-core.md  roadmap-ddd.md  tuning-profiles.md
scripts/: check_ports.py
src/analyzer/: spectrum.py
src/audo_eq/: __init__.py  __main__.py  analysis.py  api.py  audio_contract.py  cli.py  core.py  decision.py  ingest_validation.py  mastering_options.py  normalization.py  processing.py  storage.py
src/audo_eq/analyzer/: loudness.py
src/audo_eq/application/: __init__.py  artifact_persistence_service.py  event_publisher.py  mastered_artifact_repository.py  mastering_service.py
src/audo_eq/domain/: __init__.py  (+4 more)
src/audo_eq_frontend/: __init__.py  app.py
src/processor/: base.py
tests/: conftest.py  test_analysis_eq.py  test_analyzer_loudness.py  test_analyzer_spectrum.py  test_api.py  test_artifact_persistence_service.py  test_cli_entrypoint.py  test_cli_handlers.py  test_config_models.py  test_core.py  test_core_chain_config.py  test_core_pipeline.py  test_events.py  test_frontend.py  test_ingest_validation.py  test_io_audio_file.py  test_mastering_options.py  test_normalization.py  test_processing_presets.py  test_processor_eq_match.py  test_processor_limiter.py  test_processor_loudness_comp.py  test_storage.py  test_strategy_selection.py  test_tuning_regression.py
tests/fixtures/: tuning_regression.json
(+18 files in other folders)
